[package]
name = "dewy"
version = "0.1.0"
authors = ["virtue"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32-hal = {version = "0.18", features = [
    "embassy",
    "async",
    "rt",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-integrated-timers",
    "xtal-40mhz",
]}
esp-wifi  = { version = "0.3", features = [
    "esp32",
    "wifi",
    "async",
    "embassy-net",
]}
embassy-net = {version = "0.4", features = [
    "tcp",
    "dns",
    "udp",
    "dhcpv4",
    "medium-ethernet"
]}
esp-backtrace = { version = "0.10", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8", features = ["esp32", "log"] }
log = "0.4"
embassy-executor = {version = "0.5", features = ["nightly","integrated-timers","executor-thread"]}
embassy-time = "0.3.0"
static_cell = {version = "2.0.0", features = ["nightly"]}
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
heapless = "0.8.0"
embedded-svc = {version = "0.27.0", default-features = false}
sntpc = {version="0.3.7", default-features = false, features = ["async"]}
no-std-net = "0.6.0"
httparse = {version = "1.8.0", default-features = false}

